@@ -92,6 +92,7 @@ Version 1.0.xxxx (April xxth 2014)
 - Implemented: Pressure Sensor (Bar)
 - Implemented: OTGW, CH Water Pressure (if available)
 - Fixed: Thermostat SetPoint in Fahrenheit
+- Fixed: OpenZWave general type (motion sensor) (thanks to Dnpwwo!)
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
